appId: com.catatuangbelanja.catat_uang_belanja
---
- launchApp
- tapOn: "Beranda"
- tapOn:
    point: "964,1962"
- waitForAnimationToEnd
- tapOn: "Pemasukan"
- tapOn: "5"
- tapOn: "0"
- tapOn: "0"
- tapOn: "0"
- tapOn: "0"
- tapOn: "0"
- tapOn: "Gaji"
- tapOn: "✓"
- waitForAnimationToEnd
- takeScreenshot: qa-income-05-after-save
