appId: com.catatuangbelanja.catat_uang_belanja
---
- launchApp
- tapOn: "Beranda"
- tapOn:
    point: "939,685"
- waitForAnimationToEnd
- tapOn: "+ Tambah Anggaran"
- waitForAnimationToEnd
- tapOn: "Mingguan"
- waitForAnimationToEnd
- scroll
- tapOn: "1"
- tapOn: "0"
- tapOn: "0"
- tapOn: "0"
- tapOn: "0"
- tapOn: "0"
- tapOn: "✓"
- waitForAnimationToEnd
- takeScreenshot: qa-budgetweekly-03-saved
